--- a/iptv.html
+++ b/iptv.html
@@ -17,10 +17,10 @@
 	<tr>
 	<td id="s0" rowspan="2"><a href="https://meteor0928.github.io">Github 地址</a></td>
 	<td id="header" rowspan="2"><a href="./index.html">Hello World</a></td>
-	<td id="s1"><a href="">IPv4</a></td>
+	<td id="s1"><a href="./index.html">IPv4</a></td>
 	</tr>
 	<tr>
-	<td id="s2"><a href="">IPv6</a></td>
+	<td id="s2"><a href="./index.html">IPv6</a></td>
 	</tr>
 </table>
 </div>
