--- a/other.html
+++ b/other.html
@@ -31,7 +31,7 @@
             </div>
             <div class="card">
                 <a href="https://www.men.com/">Google</a>
-                <a href="https://www.pornhub.com/">学术搜索</a>
+                <a href="https://cn.pornhub.com/">学术搜索</a>
                 <a href="https://grd.bit.edu.cn/">研究生院</a>
                 <a href="http://grdms.bit.edu.cn/yjs/login.jsp">教务系统</a>
                 <a href="http://www.bitunion.org/">FTP联盟</a>
